fix/Section spacing. fix/Autoscroll

--- a/style.css
+++ b/style.css
@@ -815,11 +815,13 @@ summary::marker {
 
     /* SERVICES */
     .services {
-        min-height: 85vh;
         display: flex;
         flex-direction: column;
-        align-items: center;
         justify-content: center;
+        padding-top: 15px;
+    }
+    .services__title{
+        margin-top: 0;
     }
     .service__cards-container {
         flex-direction: row;
@@ -869,7 +871,6 @@ summary::marker {
         margin-top: 20px;
         width: 80%;
         max-width: 1080px;
-        min-height: 80vh;
     }
     .precios__container{
         margin-top: 15px;   
@@ -893,9 +894,6 @@ summary::marker {
     /* PRICES ENDS */
 
     /* ABOUT */
-    .about {
-        min-height: 70vh;
-    }
     .about__members-container {
         flex-direction: row;
         justify-content: center;
@@ -922,6 +920,11 @@ summary::marker {
         padding-left: 10px;
     }
     /* ABOUT ENDS */
+
+    /* QUESTIONS */
+    .questions{
+        min-height:0;
+    }
 
     /* MANABI */
     .manabi__title{
